syntax = "proto3";

package architecture;

enum eArchProtoID {
    Report = 0;
    AssigneID = 1;
    NoderInited = 2;
    BroadcastNoder = 3;
    ForwardClientMessage = 4;
    SendMessageToClient = 5;
    Shutdown = 6;

    Location = 51;
}

message oAddress {
    int32 area = 1;
    string ip = 2;
    int32 port = 3;
}

message oReport {
    int32 id = 1;
    string name = 2;
    oAddress address = 3;
    int64 idfa = 4;
}

message oAssigneID {
    int32 id = 1;
}

message oNoderInited {

}

message oBroadcastNoder {
    oReport info = 1;
}

message oForwardClientMessage {
    int32 protoid = 1;
    int64 account = 2;
    bytes data = 3;
}

message oSendMessageToClient {
    int32 protoid = 1;
    int64 account = 2;
    bytes data = 3;
}

enum eLocationType {
    appear = 0;
    disappear = 1;
}

message oLocation {
    int64 id = 1;
    eLocationType type = 2;
}

message oShutdown {

}
